@@ -27,10 +27,49 @@
 #include <qstyle.h>
 #include <qstyleoption.h>
 #include <qimagewriter.h>
+
 #ifndef QWT_NO_SVG
 #ifdef QT_SVG_LIB
+#if QT_VERSION >= 0x040500
+#define QWT_FORMAT_SVG 1
+#endif
+#endif
+#endif
+
+#ifndef QT_NO_PRINTER
+#define QWT_FORMAT_PDF 1
+#endif
+
+#ifndef QT_NO_PDF
+
+// QPdfWriter::setResolution() has been introduced with
+// Qt 5.3. Guess it is o.k. to stay with QPrinter for older
+// versions.
+
+#if QT_VERSION >= 0x050300
+
+#ifndef QWT_FORMAT_PDF
+#define QWT_FORMAT_PDF 1
+#endif
+
+#define QWT_PDF_WRITER 1
+
+#endif
+#endif
+
+#ifndef QT_NO_PRINTER
+// postscript support has been dropped in Qt5
+#if QT_VERSION < 0x050000
+#define QWT_FORMAT_POSTSCRIPT 1
+#endif
+#endif
+
+#if QWT_FORMAT_SVG
 #include <qsvggenerator.h>
 #endif
+
+#if QWT_PDF_WRITER
+#include <qpdfwriter.h>
 #endif
 
 static QPainterPath qwtCanvasClip( 
@@ -240,7 +279,18 @@ void QwtPlotRenderer::renderDocument( QwtPlot *plot,
     const QString fmt = format.toLower();
     if ( fmt == "pdf" )
     {
-#ifndef QT_NO_PRINTER
+#if QWT_FORMAT_PDF
+
+#if QWT_PDF_WRITER
+        QPdfWriter pdfWriter( fileName );
+        pdfWriter.setPageSizeMM( sizeMM );
+        pdfWriter.setTitle( title );
+        pdfWriter.setPageMargins( QMarginsF() );
+        pdfWriter.setResolution( resolution ); 
+        
+        QPainter painter( &pdfWriter );
+        render( plot, &painter, documentRect );
+#else
         QPrinter printer;
         printer.setOutputFormat( QPrinter::PdfFormat );
         printer.setColorMode( QPrinter::Color );
@@ -253,11 +303,11 @@ void QwtPlotRenderer::renderDocument( QwtPlot *plot,
         QPainter painter( &printer );
         render( plot, &painter, documentRect );
 #endif
+#endif
     }
     else if ( fmt == "ps" )
     {
-#if QT_VERSION < 0x050000
-#ifndef QT_NO_PRINTER
+#if QWT_FORMAT_POSTSCRIPT
         QPrinter printer;
         printer.setOutputFormat( QPrinter::PostScriptFormat );
         printer.setColorMode( QPrinter::Color );
@@ -270,13 +320,10 @@ void QwtPlotRenderer::renderDocument( QwtPlot *plot,
         QPainter painter( &printer );
         render( plot, &painter, documentRect );
 #endif
-#endif
     }
     else if ( fmt == "svg" )
     {
-#ifndef QWT_NO_SVG
-#ifdef QT_SVG_LIB
-#if QT_VERSION >= 0x040500
+#if QWT_FORMAT_SVG
         QSvgGenerator generator;
         generator.setTitle( title );
         generator.setFileName( fileName );
@@ -285,8 +332,6 @@ void QwtPlotRenderer::renderDocument( QwtPlot *plot,
 
         QPainter painter( &generator );
         render( plot, &painter, documentRect );
-#endif
-#endif
 #endif
     }
     else
@@ -366,9 +411,7 @@ void QwtPlotRenderer::renderTo(
 
 #endif
 
-#ifndef QWT_NO_SVG
-#ifdef QT_SVG_LIB
-#if QT_VERSION >= 0x040500
+#if QWT_FORMAT_SVG
 
 /*!
   \brief Render the plot to a QSvgGenerator
@@ -394,8 +437,7 @@ void QwtPlotRenderer::renderTo(
     QPainter p( &generator );
     render( plot, &p, rect );
 }
-#endif
-#endif
+
 #endif
 
 /*!
@@ -975,13 +1017,13 @@ bool QwtPlotRenderer::exportTo( QwtPlot *plot, const QString &documentName,
         QImageWriter::supportedImageFormats();
         
     QStringList filter;
-#ifndef QT_NO_PRINTER
+#if QWT_FORMAT_PDF
     filter += QString( "PDF " ) + tr( "Documents" ) + " (*.pdf)";
 #endif
-#ifndef QWT_NO_SVG 
+#if QWT_FORMAT_SVG
     filter += QString( "SVG " ) + tr( "Documents" ) + " (*.svg)";
 #endif
-#ifndef QT_NO_PRINTER
+#if QWT_FORMAT_POSTSCRIPT
     filter += QString( "Postscript " ) + tr( "Documents" ) + " (*.ps)";
 #endif
     
