@@ -3,3 +3,4 @@
 - QwtInterval::widthL introduced
 - no QwtPlotZoomer::zoomed signals when the zoom rectangle has not changed
 - QwtPlotBarChart::columnRect introduced
+- QwtPlotRenderer: using QPdfWriter where possible
